boltffi_backend/tests/jni/snapshots/jni__callback__jni_bridge_renders_callback_handle_method_closure_returns.snap
---
source: boltffi_backend/tests/jni/callback.rs
expression: "rendered_fixture(\"callback/returned_callback_closure_return\")"
---
===== jni/demo.h =====
<c abi support declarations>
typedef struct {
    void (*free)(uint64_t);
    uint64_t (*clone)(uint64_t);
    FfiStatus (*make_handler)(uint64_t, void *);
} ___ListenerVTable;
void boltffi_register_callback_demo_listener(const ___ListenerVTable *vtable);
BoltFFICallbackHandle boltffi_create_callback_demo_listener(uint64_t handle);
BoltFFICallbackHandle boltffi_function_demo_make_listener(void);

===== jni/jni_glue.c =====
<jni source includes>
<jni thread runtime>
<jni exception helpers>
<jni status helper>
typedef struct {
    void (*free)(uint64_t handle);
    uint64_t (*clone)(uint64_t handle);
} BoltFFICallbackVTablePrefix;

static const BoltFFICallbackVTablePrefix *boltffi_jni_callback_vtable_prefix(const BoltFFICallbackHandle *callback) {
    return callback == NULL ? NULL : (const BoltFFICallbackVTablePrefix *)callback->vtable;
}

static void boltffi_jni_release_callback_value(BoltFFICallbackHandle callback) {
    const BoltFFICallbackVTablePrefix *vtable = boltffi_jni_callback_vtable_prefix(&callback);
    if (callback.handle != 0 && vtable != NULL && vtable->free != NULL) {
        vtable->free(callback.handle);
    }
}

static jlong boltffi_jni_callback_handle_new_owned(JNIEnv *env, BoltFFICallbackHandle callback) {
    if (callback.handle == 0 || callback.vtable == NULL) {
        return 0;
    }
    BoltFFICallbackHandle *stored_callback = (BoltFFICallbackHandle *)malloc(sizeof(BoltFFICallbackHandle));
    if (stored_callback == NULL) {
        boltffi_jni_release_callback_value(callback);
        boltffi_jni_throw_runtime(env, "failed to allocate BoltFFI callback handle");
        return 0;
    }
    *stored_callback = callback;
    return (jlong)(uintptr_t)stored_callback;
}

static BoltFFICallbackHandle *boltffi_jni_callback_handle_ref(jlong handle) {
    return handle == 0 ? NULL : (BoltFFICallbackHandle *)(uintptr_t)handle;
}

static void boltffi_jni_callback_handle_release(BoltFFICallbackHandle *callback) {
    if (callback == NULL) {
        return;
    }
    boltffi_jni_release_callback_value(*callback);
    free(callback);
}

static jlong boltffi_jni_callback_handle_clone(JNIEnv *env, const BoltFFICallbackHandle *callback) {
    const BoltFFICallbackVTablePrefix *vtable = boltffi_jni_callback_vtable_prefix(callback);
    if (callback == NULL || callback->handle == 0 || vtable == NULL || vtable->clone == NULL) {
        return 0;
    }
    BoltFFICallbackHandle cloned_callback = {
        .handle = vtable->clone(callback->handle),
        .vtable = callback->vtable,
    };
    if (cloned_callback.handle == 0) {
        return 0;
    }
    return boltffi_jni_callback_handle_new_owned(env, cloned_callback);
}

JNIEXPORT jlong JNICALL Java_com_boltffi_demo_Native_boltffi_1callback_1handle_1clone(JNIEnv *env, jclass cls, jlong handle) {
    (void)cls;
    return boltffi_jni_callback_handle_clone(env, boltffi_jni_callback_handle_ref(handle));
}

JNIEXPORT void JNICALL Java_com_boltffi_demo_Native_boltffi_1callback_1handle_1release(JNIEnv *env, jclass cls, jlong handle) {
    (void)env;
    (void)cls;
    boltffi_jni_callback_handle_release(boltffi_jni_callback_handle_ref(handle));
}

static uint32_t boltffi_jni____closure__u32_to_u32_call(void *user_data, uint32_t arg0);
static void boltffi_jni____closure__u32_to_u32_release(void *user_data);

typedef struct {
    uint32_t (*call)(void *, uint32_t);
    void *context;
    void (*release)(void *);
} BoltFFIJniClosure___closure__u32_to_u32;
static BoltFFIJniClosure___closure__u32_to_u32 *boltffi_jni____closure__u32_to_u32_handle_ref(jlong value) {
    return value == 0 ? NULL : (BoltFFIJniClosure___closure__u32_to_u32 *)(uintptr_t)value;
}

static void boltffi_jni____closure__u32_to_u32_handle_release(jlong value) {
    BoltFFIJniClosure___closure__u32_to_u32 *closure = boltffi_jni____closure__u32_to_u32_handle_ref(value);
    if (closure == NULL) {
        return;
    }
    if (closure->release != NULL) {
        closure->release(closure->context);
    }
    free(closure);
}

static jlong boltffi_jni____closure__u32_to_u32_handle_new(JNIEnv *env, uint32_t (*call)(void *, uint32_t), void *context, void (*release)(void *)) {
    BoltFFIJniClosure___closure__u32_to_u32 *closure = (BoltFFIJniClosure___closure__u32_to_u32 *)malloc(sizeof(BoltFFIJniClosure___closure__u32_to_u32));
    if (closure == NULL) {
        if (release != NULL) {
            release(context);
        }
        boltffi_jni_throw_runtime(env, "failed to allocate BoltFFI closure handle");
        return 0;
    }
    closure->call = call;
    closure->context = context;
    closure->release = release;
    return (jlong)(uintptr_t)closure;
}

JNIEXPORT void JNICALL Java_com_boltffi_demo_Native_boltffi_1callback_1closure_1_1_1_1closure_1_1u32_1to_1u32_1release(JNIEnv *env, jclass cls, jlong value) {
    (void)env;
    (void)cls;
    boltffi_jni____closure__u32_to_u32_handle_release(value);
}

JNIEXPORT jint JNICALL Java_com_boltffi_demo_Native_boltffi_1callback_1closure_1_1_1_1closure_1_1u32_1to_1u32_1call(JNIEnv *env, jclass cls, jlong value, jint arg0) {
    (void)env;
    (void)cls;
    BoltFFIJniClosure___closure__u32_to_u32 *closure = boltffi_jni____closure__u32_to_u32_handle_ref(value);
    if (closure == NULL || closure->call == NULL) {
        return 0;
    }

    uint32_t result = closure->call(closure->context, (uint32_t)arg0);

    return (jint)result;
}

static jclass g____closure__u32_to_u32_class = NULL;
static jmethodID g____closure__u32_to_u32_call_method = NULL;
static jmethodID g____closure__u32_to_u32_free_method = NULL;
static uint32_t boltffi_jni____closure__u32_to_u32_call(void *user_data, uint32_t arg0) {
    JNIEnv *env = NULL;
    int attached = 0;
    if (!boltffi_jni_enter(&env, &attached)) {
        return 0;
    }
    jlong handle = (jlong)(uintptr_t)user_data;

    uint32_t result = (uint32_t)(*env)->CallStaticIntMethod(env, g____closure__u32_to_u32_class, g____closure__u32_to_u32_call_method, handle, (jint)arg0);
    if (boltffi_jni_clear_exception(env)) {

        boltffi_jni_exit(env, attached);
        return 0;
    }

    boltffi_jni_exit(env, attached);
    return result;
}

static void boltffi_jni____closure__u32_to_u32_release(void *user_data) {
    JNIEnv *env = NULL;
    int attached = 0;
    if (!boltffi_jni_enter(&env, &attached)) {
        return;
    }
    (*env)->CallStaticVoidMethod(env, g____closure__u32_to_u32_class, g____closure__u32_to_u32_free_method, (jlong)(uintptr_t)user_data);
    boltffi_jni_clear_exception(env);
    boltffi_jni_exit(env, attached);
}

static bool boltffi_jni_load____closure__u32_to_u32(JNIEnv *env) {
    if (!boltffi_jni_lookup_global_class_with_diagnostic(env, "com/boltffi/demo/ClosureU32ToU32Callbacks", "com/boltffi/demo/ClosureU32ToU32Callbacks", &g____closure__u32_to_u32_class)) {
        return false;
    }
    if (!boltffi_jni_lookup_static_method_with_diagnostic(env, g____closure__u32_to_u32_class, "com/boltffi/demo/ClosureU32ToU32Callbacks", "call", "call", "(JI)I", "(JI)I", &g____closure__u32_to_u32_call_method)) {
        goto fail;
    }
    if (!boltffi_jni_lookup_static_method_with_diagnostic(env, g____closure__u32_to_u32_class, "com/boltffi/demo/ClosureU32ToU32Callbacks", "free", "free", "(J)V", "(J)V", &g____closure__u32_to_u32_free_method)) {
        goto fail;
    }
    return true;
fail:
    (*env)->DeleteGlobalRef(env, g____closure__u32_to_u32_class);
    g____closure__u32_to_u32_class = NULL;
    return false;
}

static void boltffi_jni_unload____closure__u32_to_u32(JNIEnv *env) {
    if (g____closure__u32_to_u32_class != NULL) {
        (*env)->DeleteGlobalRef(env, g____closure__u32_to_u32_class);
    }
    g____closure__u32_to_u32_class = NULL;
    g____closure__u32_to_u32_call_method = NULL;
    g____closure__u32_to_u32_free_method = NULL;
}

static jclass g____ListenerVTable_class = NULL;
static jmethodID g____ListenerVTable_free_method = NULL;
static jmethodID g____ListenerVTable_clone_method = NULL;
static jmethodID g____ListenerVTable_make_handler_method = NULL;

static void ___ListenerVTable_free(uint64_t handle) {
    JNIEnv *env = NULL;
    int attached = 0;
    if (!boltffi_jni_enter(&env, &attached)) {
        return;
    }
    (*env)->CallStaticVoidMethod(env, g____ListenerVTable_class, g____ListenerVTable_free_method, (jlong)handle);
    boltffi_jni_clear_exception(env);
    boltffi_jni_exit(env, attached);
}

static uint64_t ___ListenerVTable_clone(uint64_t handle) {
    JNIEnv *env = NULL;
    int attached = 0;
    if (!boltffi_jni_enter(&env, &attached)) {
        return 0;
    }
    jlong result = (*env)->CallStaticLongMethod(env, g____ListenerVTable_class, g____ListenerVTable_clone_method, (jlong)handle);
    if (boltffi_jni_clear_exception(env)) {
        boltffi_jni_exit(env, attached);
        return 0;
    }
    boltffi_jni_exit(env, attached);
    return (uint64_t)result;
}

static FfiStatus ___ListenerVTable_make_handler(uint64_t handle, void *return_out) {
    JNIEnv *env = NULL;
    int attached = 0;

    if (!boltffi_jni_enter(&env, &attached)) {
        return (FfiStatus){.code = 1};
    }

    jlong __boltffi_return_handle = (*env)->CallStaticLongMethod(env, g____ListenerVTable_class, g____ListenerVTable_make_handler_method, (jlong)handle);
    if (boltffi_jni_clear_exception(env)) {
        goto __boltffi_fail;
    }

    if (return_out == NULL) {
        boltffi_jni____closure__u32_to_u32_release((void *)(uintptr_t)__boltffi_return_handle);
        goto __boltffi_fail;
    }
    typedef struct {
        uint32_t (*invoke)(void *, uint32_t);
        void *context;
        void (*release)(void *);
    } BoltFFIJniClosureReturnU32ToU32;
    BoltFFIJniClosureReturnU32ToU32 __boltffi_return = {
        .invoke = boltffi_jni____closure__u32_to_u32_call,
        .context = (void *)(uintptr_t)__boltffi_return_handle,
        .release = boltffi_jni____closure__u32_to_u32_release,
    };
    *((BoltFFIJniClosureReturnU32ToU32 *)return_out) = __boltffi_return;
    FfiStatus result = (FfiStatus){.code = 0};

    boltffi_jni_exit(env, attached);
    return result;
__boltffi_fail:

    boltffi_jni_clear_exception(env);
    boltffi_jni_exit(env, attached);

    return (FfiStatus){.code = 1};
}

JNIEXPORT jlong JNICALL Java_com_boltffi_demo_Native_boltffi_1callback_1handle_1demo_1listener_1make_1handler(JNIEnv *env, jclass cls, jlong callback) {
    (void)cls;

    BoltFFICallbackHandle *callback_handle = boltffi_jni_callback_handle_ref(callback);
    const ___ListenerVTable *vtable = callback_handle == NULL ? NULL : (const ___ListenerVTable *)callback_handle->vtable;
    if (callback_handle == NULL || callback_handle->handle == 0 || vtable == NULL || vtable->make_handler == NULL) {
        boltffi_jni_throw_runtime(env, "BoltFFI callback handle was null or invalid");
        goto __boltffi_error;
    }

    typedef struct {
        uint32_t (*invoke)(void *, uint32_t);
        void *context;
        void (*release)(void *);
    } BoltFFIJniClosureReturnU32ToU32;
    BoltFFIJniClosureReturnU32ToU32 __boltffi_return = {0};
    FfiStatus status = vtable->make_handler(callback_handle->handle, &__boltffi_return);

    if (status.code != 0) {
        boltffi_jni_throw_status(env, status);
        return 0;
    }

    return boltffi_jni____closure__u32_to_u32_handle_new(env, __boltffi_return.invoke, __boltffi_return.context, __boltffi_return.release);
__boltffi_error:
    return 0;
}

static ___ListenerVTable g____ListenerVTable_vtable = {
    .free = ___ListenerVTable_free,
    .clone = ___ListenerVTable_clone,
    .make_handler = ___ListenerVTable_make_handler,
};

static bool boltffi_jni_load____ListenerVTable_callbacks(JNIEnv *env) {
    if (!boltffi_jni_lookup_global_class_with_diagnostic(env, "com/boltffi/demo/ListenerCallbacks", "com/boltffi/demo/ListenerCallbacks", &g____ListenerVTable_class)) {
        return false;
    }
    if (!boltffi_jni_lookup_static_method_with_diagnostic(env, g____ListenerVTable_class, "com/boltffi/demo/ListenerCallbacks", "free", "free", "(J)V", "(J)V", &g____ListenerVTable_free_method)) {
        goto fail;
    }
    if (!boltffi_jni_lookup_static_method_with_diagnostic(env, g____ListenerVTable_class, "com/boltffi/demo/ListenerCallbacks", "clone", "clone", "(J)J", "(J)J", &g____ListenerVTable_clone_method)) {
        goto fail;
    }
    if (!boltffi_jni_lookup_static_method_with_diagnostic(env, g____ListenerVTable_class, "com/boltffi/demo/ListenerCallbacks", "make_handler", "make_handler", "(J)J", "(J)J", &g____ListenerVTable_make_handler_method)) {
        goto fail;
    }
    boltffi_register_callback_demo_listener(&g____ListenerVTable_vtable);
    return true;
fail:
    (*env)->DeleteGlobalRef(env, g____ListenerVTable_class);
    g____ListenerVTable_class = NULL;
    return false;
}

static void boltffi_jni_unload____ListenerVTable_callbacks(JNIEnv *env) {
    if (g____ListenerVTable_class != NULL) {
        (*env)->DeleteGlobalRef(env, g____ListenerVTable_class);
    }
    g____ListenerVTable_class = NULL;
    g____ListenerVTable_free_method = NULL;
    g____ListenerVTable_clone_method = NULL;
    g____ListenerVTable_make_handler_method = NULL;
}

JNIEXPORT jint JNICALL JNI_OnLoad(JavaVM *vm, void *reserved) {
    (void)reserved;
    JNIEnv *env = NULL;
    jint env_result = (*vm)->GetEnv(vm, (void **)&env, JNI_VERSION_1_6);
    if (env_result != JNI_OK) {
        fprintf(stderr, "BoltFFI JNI_OnLoad failed: GetEnv(JNI_VERSION_1_6) returned %d\n", (int)env_result);
        return JNI_ERR;
    }
    if (!boltffi_jni_lookup_global_class_with_diagnostic(env, "com/boltffi/demo/Native", "com/boltffi/demo/Native", &boltffi_jni_native_class)) {
        return JNI_ERR;
    }
    if (!boltffi_jni_load____ListenerVTable_callbacks(env)) {
        boltffi_jni_unload____ListenerVTable_callbacks(env);
        boltffi_jni_unload____closure__u32_to_u32(env);
        (*env)->DeleteGlobalRef(env, boltffi_jni_native_class);
        boltffi_jni_native_class = NULL;
        return JNI_ERR;
    }
    if (!boltffi_jni_load____closure__u32_to_u32(env)) {
        boltffi_jni_unload____ListenerVTable_callbacks(env);
        boltffi_jni_unload____closure__u32_to_u32(env);
        (*env)->DeleteGlobalRef(env, boltffi_jni_native_class);
        boltffi_jni_native_class = NULL;
        return JNI_ERR;
    }
    boltffi_jni_vm = vm;
    return JNI_VERSION_1_6;
}

JNIEXPORT void JNICALL JNI_OnUnload(JavaVM *vm, void *reserved) {
    (void)reserved;
    JNIEnv *env = NULL;
    if ((*vm)->GetEnv(vm, (void **)&env, JNI_VERSION_1_6) == JNI_OK) {
        boltffi_jni_unload____ListenerVTable_callbacks(env);
        boltffi_jni_unload____closure__u32_to_u32(env);
        if (boltffi_jni_native_class != NULL) {
            (*env)->DeleteGlobalRef(env, boltffi_jni_native_class);
        }
    }
    boltffi_jni_vm = NULL;
    boltffi_jni_native_class = NULL;
}

JNIEXPORT jlong JNICALL Java_com_boltffi_demo_Native_boltffi_1function_1demo_1make_1listener(JNIEnv *env, jclass cls) {
    (void)cls;

    (void)env;
    BoltFFICallbackHandle __boltffi_result = boltffi_function_demo_make_listener();

    return boltffi_jni_callback_handle_new_owned(env, __boltffi_result);
}
